--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proyecto de chat con node y socket.io",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gerlis A.c",
